--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/helpers": "^1.7",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "nesbot/carbon": "^3.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
