--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "awcodes/filament-tiptap-editor": "^3.4",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/helpers": "^1.7",
