--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.9",
         "laravel/helpers": "^1.7",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^3.8"
     },
     "require-dev": {
