--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/helpers": "^1.7",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
-        "nesbot/carbon": "^3.8"
+        "nesbot/carbon": "^3.8",
+        "phpoffice/phpspreadsheet": "^1.29"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
